# kasserver

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  kasserver_dns.py  kasserver_dns_certbot.py  kasserver_dns_lego.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml
kasserver/: KasApi.wsdl  __init__.py  kasserver_dns.py  kasserver_dns_certbot.py  kasserver_dns_lego.py
tests/: __init__.py  test_kasserver.py  test_kasserver_dns.py  test_kasserver_dns_certbot.py  test_kasserver_dns_lego.py
